--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@ var ParameterArray = FullURL.split('=');
 alert(ParameterArray);
 
 </script>
+  <style>
+    div {
+  width: 100px;
+  height: 100px;
+  background: red;
+  position: relative;
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  from {top: 0px;}
+  to {top: 200px;}
+}
+  </style>
+  <div>
 <h2 id="demo1"></h2>
+  </div>
 <script>
 document.getElementById("demo1").innerHTML = ParameterArray;
 </script>
