--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ alert(ParameterArray);
 
 </script>
   <style>
-    div {
-  width: 100px;
-  height: 100px;
+    h2 {
+  font-weight:120px
   background: red;
   position: relative;
   animation: mymove 5s infinite;
