--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@ alert(ParameterArray);
 </script>
   <style>
     h2 {
-  font-weight:120px
+  font-size:100px;
  color: red;
   position: relative;
   animation: mymove 5s infinite;
 }
 
 @keyframes mymove {
-  0% { color: red;top: 0px;}
-  20% { color: red;top: 200px;}
-   60% { color: red;top: 0px;}
-  100% { color: red;top: 200px;}
+  0% { font-size:100px;text-color: red;top: 0px;}
+  20% { font-size:100px;text-color: blue;top: 200px;}
+   60% {font-size:100px; text-color: red;top: 0px;}
+  100% {font-size:100px; text-color: blue;top: 200px;}
 }
   </style>
   <div>
