--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ alert(ParameterArray);
 }
 
 @keyframes mymove {
-  0% { font-size:100px;text-color: red;top: 0px;}
-  20% { font-size:100px;text-color: blue;top: 200px;}
-   60% {font-size:100px; text-color: red;top: 0px;}
-  100% {font-size:100px; text-color: blue;top: 200px;}
+  0% { font-size:100px;color: red;top: 200px;}
+  20% { font-size:100px;color: blue;top: 20px;}
+   60% {font-size:100px;color: red;top: 200px;}
+  100% {font-size:100px;color: blue;top: 20px;}
 }
   </style>
   <div>
