--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ alert(ParameterArray);
 </script>
   <style>
     h2 {
-  font-size:100px;
+  font-size:200px;
 
   position: relative;
   animation: mymove 5s infinite;
@@ -25,8 +25,9 @@ alert(ParameterArray);
   100% {font-size:100px;color: blue;top: 20px;}
 }
   </style>
-  <div>
+  <div><center>
 <h2 id="demo1"></h2>
+    </center>
   </div>
 <script>
 document.getElementById("demo1").innerHTML = ParameterArray;
