--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@ alert(ParameterArray);
 </script>
   <style>
     h2 {
-  font-size:200px;
+/*   font-size:200px; */
 
   position: relative;
   animation: mymove 5s infinite;
 }
 
 @keyframes mymove {
-  0% { font-size:100px;color: red;top: 200px;}
-  20% { font-size:100px;color: blue;top: 20px;}
-   60% {font-size:100px;color: red;top: 200px;}
-  100% {font-size:100px;color: blue;top: 20px;}
+  0% { font-size:200px;color: red;top: 200px;}
+  20% { font-size:200px;color: blue;top: 20px;}
+   60% {font-size:50%;color: red;top: 200px;}
+  100% {font-size:200px;color: blue;top: 20px;}
 }
   </style>
   <div><center>
