--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ alert(ParameterArray);
 
 </script>
   <style>
+    p{
+    font-size:35px;
+    }
     h2 {
 /*   font-size:200px; */
 
@@ -25,6 +28,7 @@ alert(ParameterArray);
   100% {font-size:200px;color: blue;top: 20px;}
 }
   </style>
+  <p bgcolor="black" color="pink"><center><b>Hey handsome You Look Beautiful 😉 </b></center></p>
   <div><center>
 <h2 id="demo1"></h2>
     </center>
