--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ alert(ParameterArray);
   <style>
     p{
     font-size:35px;
+      background-color:black;
+      color:pink;
     }
     h2 {
 /*   font-size:200px; */
@@ -28,7 +30,7 @@ alert(ParameterArray);
   100% {font-size:200px;color: blue;top: 20px;}
 }
   </style>
-  <p bgcolor="black" color="pink"><center><b>Hey handsome You Look Beautiful 😉 </b></center></p>
+  <p><center><b>Hey handsome You Look Beautiful 😉 </b></center></p>
   <div><center>
 <h2 id="demo1"></h2>
     </center>
