--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@ alert(ParameterArray);
   <style>
     b{
     font-size:35px;
+      
       background-color:black;
       color:pink;
+    }
+    p{
+      border-radius:3px;
+       background-color:black;
     }
     h2 {
 /*   font-size:200px; */
